...

            detailRow(
                systemImage: "sunrise.fill",
                titleKey: NSLocalizedString("detail_sunrise_title", comment: ""),
                value: model.sunrise
            )
            .accessibilityIdentifier("sunriseRow")

            detailRow(
                systemImage: "sunset.fill",
                titleKey: NSLocalizedString("detail_sunset_title", comment: ""),
                value: model.sunset
            )
...
